Bug 94811 - Open remote file - cancel - crash
Summary: Open remote file - cancel - crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2015-10-06 07:27 UTC by Oliver Specht (CIB)
Modified: 2016-10-25 19:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
stack trace (1.98 KB, text/plain)
2015-10-06 07:27 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2015-10-06 07:27:51 UTC
Created attachment 119331 [details]
stack trace

On Windows, I get a crash after closing the 'Open Remote File' dialog
Console output:
vcl/source/window/window.cxx:281: Window ( class VclVBox()) with live children destroyed:  class AutocompleteEdit()

stack trace is attached
Comment 1 Maxim Monastirsky 2015-10-06 07:48:25 UTC
Unable to test myself right now, but the problem is most likely from 495285ee3a00d6c14e3d5a8df2e5715fb7edb233. In RemoteFilesDialog::dispose(), m_pName_ed should be disposeAndClear'ed instead of just clear(), since we don't load this widget from .ui anymore.
Comment 2 Julien Nabet 2015-10-06 08:03:54 UTC
I had reproduced this some days ago and planned to submit a bug.
Anyway, putting at NEW and increase a bit importance since it's a crash.
Comment 3 Oliver Specht (CIB) 2015-10-06 08:06:03 UTC
(In reply to Maxim Monastirsky from comment #1)
> Unable to test myself right now, but the problem is most likely from
> 495285ee3a00d6c14e3d5a8df2e5715fb7edb233. In RemoteFilesDialog::dispose(),
> m_pName_ed should be disposeAndClear'ed instead of just clear(), since we
> don't load this widget from .ui anymore.

That does the trick. Patch is coming.
Comment 4 Alex Thurgood 2015-10-06 09:04:57 UTC
FWIW, confirming also on OSX

Version: 5.1.0.0.alpha1+
Build ID: 11fe4810ad82eaeb50c164b33c4f908c8fc045f1
Locale : fr-FR (fr.UTF-8)
Comment 5 Commit Notification 2015-10-06 09:18:42 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9157d1a21c67db270d52c30785857d2e6c5bf1a

tdf#94811: Crash in Open Remote File dialog fixed

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2015-10-10 05:44:21 UTC
So fixed since it only happened on master branch.
Comment 7 Julien Nabet 2015-10-10 05:44:52 UTC
and Verified since I don't reproduce the crash with master sources updated yesterday (so with the fix included).