tdf#94811: Crash in Open Remote File dialog fixed

Edit control needed a disposeAndClear instead of a clear

Change-Id: I24f4ec8c391080cb83574949cc141c883b43cfb9
Reviewed-on: https://gerrit.libreoffice.org/19185
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
(cherry picked from commit f9157d1a21c67db270d52c30785857d2e6c5bf1a)